force-app/main/default/objects/Success_Skill__c/Success_Skill__c.object-meta.xml
<CustomObject>
    <label>Success Skill</label>
    <nameField>
        <label>Success Skills Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>