force-app/main/default/objects/Success_Skill__c/fields/Profiency__c.field-meta.xml
<CustomField>
    <fullName>Profiency__c</fullName>
    <label>Profiency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lowest</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Highest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>