force-app/main/default/objects/Success_Skill__c/fields/Skill_ID__c.field-meta.xml
<CustomField>
    <fullName>Skill_ID__c</fullName>
    <label>Skill ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>